--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parallax Scrolling Website</title>
+    <title>Portifolio Parallax</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -56,7 +56,7 @@
           no cotidiano do trabalho utilizo tecnologias como Angular, Tailwind, e
           Typescript,<br />
           as vezes realizo algumas tasks no Back-End onde utilizamos NestJS,
-          usamos o <br />Figma para vermos o mockup das telas, também trabalhos
+          usamos o <br />Figma para vermos o mockup das telas, também trabalhamos
           com PostgresSql e JIRA <br />para monitoramento e auxílio de tarefas.
         </p>
       </div>
