--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
         <h2 id="titulo">Projetos</h2>
         <div id="grid-project">
           <div>
-            <a href="https://github.com/leozambrana/Movie-Project-React" target="_blank"><img src="/assets/img/MoviesProject.jpg" alt="Projeto Filme" /></a>           
+            <a href="https://github.com/leozambrana/Movie-Project-React" target="_blank"><img src="./assets/img/MoviesProject.jpg" alt="Projeto Filme" /></a>           
             <p>Site de filmes criado em ReactJS, <br>consumindo diretamente da API do TMDB</p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/DiscordBOT" target="_blank"> <img src="/assets/img/DiscordBotProject.jpg" alt="Discord BOT" /></a>          
+            <a href="https://github.com/leozambrana/DiscordBOT" target="_blank"> <img src="./assets/img/DiscordBotProject.jpg" alt="Discord BOT" /></a>          
             <p>Bot do Discord utilizando Discord.JS e JavaScript,<br> feito todo otimizado para receber novas features</p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/PokedexAngular" target="_blank"><img src="/assets/img/PokedexAngularProject.jpg" alt="Pokedex Angular" /></a>           
+            <a href="https://github.com/leozambrana/PokedexAngular" target="_blank"><img src="./assets/img/PokedexAngularProject.jpg" alt="Pokedex Angular" /></a>           
             <p>Pokedex criada em Angular e Typescript empregando conceitos de rotas e operadores</p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/Curso_Coder_AngularFront" target="_blank"> <img src="/assets/img/CoderAngular.jpg" alt="Coder Angular" /></a>          
+            <a href="https://github.com/leozambrana/Curso_Coder_AngularFront" target="_blank"> <img src="./assets/img/CoderAngular.jpg" alt="Coder Angular" /></a>          
             <p>Site criado em Angular e Typescript também usando routers e boa estrutura</p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/Mobius-Outer-Wilds-site" target="_blank"> <img src="/assets/img/OuterWildsProject.jpg" alt="OuterWilds" /></a>           
+            <a href="https://github.com/leozambrana/Mobius-Outer-Wilds-site" target="_blank"> <img src="./assets/img/OuterWildsProject.jpg" alt="OuterWilds" /></a>           
             <p>Site feito usando HTML5, JS e Tailwind, inspirado no site do própio jogo OuterWilds</p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/WeatherForecast" target="_blank"><img src="/assets/img/WeatherForecastProject.jpg" alt="Clima Tempo" /></a>           
+            <a href="https://github.com/leozambrana/WeatherForecast" target="_blank"><img src="./assets/img/WeatherForecastProject.jpg" alt="Clima Tempo" /></a>           
             <p>Site consumindo API'S de bandeiras e de Clima Tempo</p>
           </div>
         </div>
@@ -203,14 +203,14 @@
         <div class="links">
           <a href="https://www.instagram.com/leoczambrana/"
             ><img
-              src="/assets/img/instagram-167-svgrepo-com (1).svg"
+              src="./assets/img/instagram-167-svgrepo-com (1).svg"
               alt="Instagram"
           /></a>
           <a href="https://www.linkedin.com/in/leonardo-zambrana-857171226/"
-            ><img src="/assets/img/linkedin-161-svgrepo-com.svg" alt="Linkedin"
+            ><img src="./assets/img/linkedin-161-svgrepo-com.svg" alt="Linkedin"
           /></a>
           <a href="https://github.com/leozambrana"
-            ><img src="/assets/img/github.png" alt="Github"/></a>
+            ><img src="./assets/img/github.png" alt="Github"/></a>
         </div>
       </div>
     </main>
