--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portifolio Parallax</title>
+    <title>Portfólio Parallax</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -35,7 +35,7 @@
           alt="mountains_behind"
           id="mountains_behind"
         />
-        <h2 id="text">Portifólio</h2>
+        <h2 id="text">Portfólio</h2>
         <img
           src="./assets/img/mountains_front.png"
           alt="mountains_front"
