--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Parallax</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <span class="top"></span>
     <header>
       <a href="" class="logo">Leonardo</a>
-      <ul>
-        <li>
-          <a id="botao-sobre">Sobre</a>
-        </li>
-        <li>
-          <a id="botao-projeto">Projetos</a>
-        </li>
-        <li>
-          <a id="botao-tecnologia">Tecnologias</a>
-        </li>
-        <li>
-          <a id="botao-contato">Contato</a>
-        </li>
-      </ul>
+      <nav>
+        <ul>
+          <li>
+            <a id="botao-sobre">Sobre</a>
+          </li>
+          <li>
+            <a id="botao-projeto">Projetos</a>
+          </li>
+          <li>
+            <a id="botao-tecnologia">Tecnologias</a>
+          </li>
+          <li>
+            <a id="botao-contato">Contato</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section>
@@ -56,8 +59,9 @@
           no cotidiano do trabalho utilizo tecnologias como Angular, Tailwind, e
           Typescript,<br />
           as vezes realizo algumas tasks no Back-End onde utilizamos NestJS,
-          usamos o <br />Figma para vermos o mockup das telas, também trabalhamos
-          com PostgresSql e JIRA <br />para monitoramento e auxílio de tarefas.
+          usamos o <br />Figma para vermos o mockup das telas, também
+          trabalhamos com PostgresSql e JIRA <br />para monitoramento e auxílio
+          de tarefas.
         </p>
       </div>
 
@@ -65,27 +69,70 @@
         <h2 id="titulo">Projetos</h2>
         <div id="grid-project">
           <div>
-            <a href="https://github.com/leozambrana/Movie-Project-React" target="_blank"><img src="./assets/img/MoviesProject.jpg" alt="Projeto Filme" /></a>           
-            <p>Site de filmes criado em ReactJS, <br>consumindo diretamente da API do TMDB</p>
+            <a
+              href="https://github.com/leozambrana/Movie-Project-React"
+              target="_blank"
+              ><img src="./assets/img/MoviesProject.jpg" alt="Projeto Filme"
+            /></a>
+            <p>
+              Site de filmes criado em ReactJS, <br />consumindo diretamente da
+              API do TMDB
+            </p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/DiscordBOT" target="_blank"> <img src="./assets/img/DiscordBotProject.jpg" alt="Discord BOT" /></a>          
-            <p>Bot do Discord utilizando Discord.JS e JavaScript,<br> feito todo otimizado para receber novas features</p>
+            <a href="https://github.com/leozambrana/DiscordBOT" target="_blank">
+              <img src="./assets/img/DiscordBotProject.jpg" alt="Discord BOT"
+            /></a>
+            <p>
+              Bot do Discord utilizando Discord.JS e JavaScript,<br />
+              feito todo otimizado para receber novas features
+            </p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/PokedexAngular" target="_blank"><img src="./assets/img/PokedexAngularProject.jpg" alt="Pokedex Angular" /></a>           
-            <p>Pokedex criada em Angular e Typescript empregando conceitos de rotas e operadores</p>
+            <a
+              href="https://github.com/leozambrana/PokedexAngular"
+              target="_blank"
+              ><img
+                src="./assets/img/PokedexAngularProject.jpg"
+                alt="Pokedex Angular"
+            /></a>
+            <p>
+              Pokedex criada em Angular e Typescript empregando conceitos de
+              rotas e operadores
+            </p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/Curso_Coder_AngularFront" target="_blank"> <img src="./assets/img/CoderAngular.jpg" alt="Coder Angular" /></a>          
-            <p>Site criado em Angular e Typescript também usando routers e boa estrutura</p>
+            <a
+              href="https://github.com/leozambrana/Curso_Coder_AngularFront"
+              target="_blank"
+            >
+              <img src="./assets/img/CoderAngular.jpg" alt="Coder Angular"
+            /></a>
+            <p>
+              Site criado em Angular e Typescript também usando routers e boa
+              estrutura
+            </p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/Mobius-Outer-Wilds-site" target="_blank"> <img src="./assets/img/OuterWildsProject.jpg" alt="OuterWilds" /></a>           
-            <p>Site feito usando HTML5, JS e Tailwind, inspirado no site do própio jogo OuterWilds</p>
+            <a
+              href="https://github.com/leozambrana/Mobius-Outer-Wilds-site"
+              target="_blank"
+            >
+              <img src="./assets/img/OuterWildsProject.jpg" alt="OuterWilds"
+            /></a>
+            <p>
+              Site feito usando HTML5, JS e Tailwind, inspirado no site do
+              própio jogo OuterWilds
+            </p>
           </div>
           <div>
-            <a href="https://github.com/leozambrana/WeatherForecast" target="_blank"><img src="./assets/img/WeatherForecastProject.jpg" alt="Clima Tempo" /></a>           
+            <a
+              href="https://github.com/leozambrana/WeatherForecast"
+              target="_blank"
+              ><img
+                src="./assets/img/WeatherForecastProject.jpg"
+                alt="Clima Tempo"
+            /></a>
             <p>Site consumindo API'S de bandeiras e de Clima Tempo</p>
           </div>
         </div>
@@ -171,7 +218,9 @@
             <p>PostgreSQL</p>
           </div>
           <div class="skill">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg"
+            />
             <p>Java</p>
           </div>
         </div>
@@ -180,7 +229,7 @@
       <div class="sec" id="contact">
         <div class="contato">
           <h2 class="title">Contato</h2>
-          <div class="form-area">
+          <div id="form-area">
             <form>
               <input
                 type="text"
@@ -207,10 +256,13 @@
               alt="Instagram"
           /></a>
           <a href="https://www.linkedin.com/in/leonardo-zambrana-857171226/"
-            ><img src="./assets/img/linkedin-161-svgrepo-com.svg" alt="Linkedin"
+            ><img
+              src="./assets/img/linkedin-161-svgrepo-com.svg"
+              alt="Linkedin"
           /></a>
           <a href="https://github.com/leozambrana"
-            ><img src="./assets/img/github.png" alt="Github"/></a>
+            ><img src="./assets/img/github.png" alt="Github"
+          /></a>
         </div>
       </div>
     </main>
